[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
selenium = ">=4.35.0,<5.0.0"
beautifulsoup4 = ">=4.13.5,<5.0.0"
requests = ">=2.32.5,<3.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
